# bzl-gw

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  artifactory_downloader.cfg  local_downloader.cfg  pom.xml
gateway-for-bazel/: BUILD.bazel  pom.xml
gateway-for-bazel/src/main/kotlin/com/alexvish/bazelproxy/: Application.kt  ResponseFileStorage.kt  StoreResponse.kt
gateway-for-bazel/src/main/resources/: application.yaml
put-to-home/: .bazelrc  ENV
