
package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

KOTLIN_LANGUAGE_LEVEL = "1.7"
JAVA_LANGUAGE_LEVEL = "17"

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = KOTLIN_LANGUAGE_LEVEL,  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
    jvm_target = JAVA_LANGUAGE_LEVEL, # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", or "17"
    language_version = KOTLIN_LANGUAGE_LEVEL,  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
)

genrule(
    name = "xxx",
    outs = ["message.txt"],
    cmd = """
        echo message>$@
    """,
)
