package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_jvm_library(
    name = "bazel-gateway-lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        artifact("org.springframework.cloud:spring-cloud-starter-gateway:4.0.1"),
    ],
)

# lint does not work for some reason
# load("@io_bazel_rules_kotlin//kotlin:lint.bzl", "ktlint_fix", "ktlint_test")
#
# ktlint_test(
#     name = "lint_test",
#     srcs = glob(["src/main/kotlin/**/*.kt"]),
# )
#
# ktlint_fix(
#     name = "lint_fix",
#     srcs = glob(["src/main/kotlin/**/*.kt"]),
# )

load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "bazel-gateway",
    main_class = "com.alexvish.bazelproxy.ApplicationKt",
    runtime_deps = [":bazel-gateway-lib"],
)
